# CASCADE

./: .env.example  .gitignore  CASCADE_JOURNAL_READY_REPORT.md  CONTRIBUTION.md  Dockerfile  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: tests.yml
benchmark/replication_benchmark_v1/: LICENSE.txt  README.md  leaderboard.json  manifest.json  predictions_cascade.csv
data/: PROVENANCE.json
docs/: known_issues.md
paper/: data_card.md  model_card.md  provenance_manifest.csv  regenerate.sh  replication_label_definition.yaml
paper/figure_data/: fig2_reliability.csv  fig3_per_stratum_auroc.csv  fig_ablation.csv  table1_gate.csv  (+2 more)
results/: ablation.json  benchmark_real.json  biological_interpretation.json  fscp_pilot.json  loso_failure_analysis.json  maic_baseline.json  phase3_evaluation.json  real_collapse.json  scientific_gate.json  wbc_baseline.json
scripts/: check_no_demo.sh  check_realness_manifest.py  ci_realness.sh  compute_maic_baseline.py  compute_wbc_baseline.py  realness_audit.py  run_ablation.py  run_biological_interpretation.py  run_loso_analysis.py
tests/: conftest.py  test_ablation.py  test_aggregation.py  test_baselines.py  test_benchmark.py  test_benchmark_v1.py  test_biological_interpretation.py  test_cli.py  test_conformal.py  test_corpus_real.py  test_data.py  test_dp.py  test_evaluation.py  test_fscp.py  test_gate.py  test_mcp_server.py  test_merged.py  test_metaanalysis.py  test_oracle.py  test_orcs.py  test_provenance.py  test_realness.py  test_replogle.py  test_secure_agg.py  test_synthetic_fixture.py  test_wbc_baseline.py
(+34 files in other folders)
