[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cascade-oracle"
version = "0.1.0"
description = "Federated CRISPR-screen replication oracle — predicts P(hit replicates cross-lab) with calibrated uncertainty"
authors = [{ name = "Sahaj Satani", email = "ss4497@cornell.edu" }]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.10"
keywords = ["CRISPR", "functional genomics", "replication", "meta-analysis", "conformal prediction", "DepMap"]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "pandas>=2.0",
    "anndata>=0.9",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov", "black", "ruff"]

[project.scripts]
cascade = "cascade.cli:main"

[project.urls]
Repository = "https://github.com/ssatanis/CASCADE"

[tool.hatch.build.targets.wheel]
packages = ["src/cascade"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["error::RuntimeWarning"]
